Address code review: use toList() instead of Collectors.toList()
Co-authored-by: Ramon2107 <215512735+Ramon2107@users.noreply.github.com>